# Simplex_topology

./: CMakeLists.txt  Simplex.hpp  SimplicialComplex.hpp  helper.hpp  main.cpp
